# cookiecutter-bv

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  docs.yml  interrogate-badge.yml  links-html-scheduled.yml  links-md.yml  release.yml
{{cookiecutter.project_slug}}/docs/: api.md  hooks.py  index.md
{{cookiecutter.project_slug}}/docs/overrides/: main.html
{{cookiecutter.project_slug}}/docs/overrides/python/material/: class.html.jinja  function.html.jinja
{{cookiecutter.project_slug}}/licenses/: LICENSE_APACHE_2.0  LICENSE_GPL_3.0  LICENSE_PROPRIETARY
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
