[project]
name = "{{cookiecutter.github_repo_name}}"
dynamic = ["version"]
description = "{{cookiecutter.project_description}}"
authors = [
    {name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}"},
]
readme = "README.md"
requires-python = ">={{cookiecutter.python_requires}}"
license-files = ["LICENSE"]

dependencies = []

[project.urls]
Homepage = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.github_repo_name}}"
{%- if cookiecutter.enable_docs == "yes" %}
Documentation = "https://{{cookiecutter.github_username}}.github.io/{{cookiecutter.github_repo_name}}"
{%- endif %}
Repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.github_repo_name}}"
Issues = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.github_repo_name}}/issues"
Changelog = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.github_repo_name}}/releases"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["src/{{cookiecutter.project_slug}}"]

[dependency-groups]
{%- if cookiecutter.enable_docs == "yes" %}
docs = [
    "mkdocs-material>=9.7.6,<10",
    "mike>=2.1.3,<3",
    "mkdocstrings[python]>=1.0.4,<2",
    "mkdocs-autorefs>=1.4.4,<2",
    "mkdocs-gen-files>=0.6.1,<1",
    "mkdocs-minify-plugin>=0.8.0,<1",
]
{%- endif %}
dev = [
{%- if cookiecutter.enable_docs == "yes" %}
    {include-group = "docs"},
{%- endif %}
{%- if cookiecutter.enable_interrogate == "yes" %}
    "interrogate>=1.7.0,<2",
{%- endif %}
{%- if cookiecutter.enable_mypy == "yes" %}
    "mypy>=1.20.1,<2",
{%- endif %}
    "pre-commit>=4.6.0,<5",
    "pytest>=9.0.3,<10",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
addopts = [
    "--doctest-modules",
    "--import-mode=importlib",
    "--cov={{cookiecutter.project_slug}}",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

[tool.ruff]
target-version = "py{{cookiecutter.python_requires | replace('.', '')}}"
line-length = 79

[tool.ruff.lint]
ignore = ["C901", "E501", "E741", "F402", "F823", "E402"]
select = ["C", "E", "F", "W", "I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["{{cookiecutter.project_slug}}"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

{%- if cookiecutter.enable_interrogate == "yes" %}
[tool.interrogate]
style = "google"
exclude = ["tests", "scratches"]
ignore-private = true
ignore-semiprivate = true
color = true
{%- endif %}

{%- if cookiecutter.enable_mypy == "yes" %}
[tool.mypy]
python_version = "{{cookiecutter.python_requires}}"
files = ["scripts", "src", "tests"]
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
{%- endif %}